--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- googleのMaterialのアイコンを使うためのリンク -->
+    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+
     <title>GLINE</title>
   </head>
   <body>
